# RAG-demo

./: .env_example  .gitignore  README.md  app.py  gen_vector_db.py  model.py  pyproject.toml  requirements.txt
data/: embed_this.txt
