# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel", "cmake"]
build-backend = "setuptools.build_meta"

[tool.cmake]
extra_cmake_args = ["-DLLAMA_METAL=on"]

[options]
install_requires = [
    "llama-cpp-python",
]

[options.extras_require]
server = [
    "llama-cpp-python[server]",
]
